even spacing, background and font color fix, the input box still needs to be stylised

--- a/client/src/styles/css/Registration.css
+++ b/client/src/styles/css/Registration.css
@@ -103,9 +103,3 @@
       border-top-left-radius: 6px;
       border-top-right-radius: 6px;
       background: red; }
-
-.game-search .results li {
-  color: #1e1e2b; }
-
-.game-search .selected li {
-  background: #c82128; }
