--- a/client/src/styles/css/master.css
+++ b/client/src/styles/css/master.css
@@ -720,12 +720,6 @@ h3 {
       border-top-right-radius: 6px;
       background: red; }
 
-.game-search .results li {
-  color: #1e1e2b; }
-
-.game-search .selected li {
-  background: #c82128; }
-
 .RadioGroup {
   margin: 20px 0px; }
   .RadioGroup .choices {
@@ -747,3 +741,30 @@ h3 {
 .RadioGroup.importance .choices {
   grid-template: 1fr / 1fr 1fr 1fr;
   grid-gap: 10px 10px; }
+
+/* Chuck your variables in here*/
+/* colors */
+/* sizes */
+/* backgrounds */
+/* paddings */
+/* border */
+/* kittens */
+.search-input .SearchInput {
+  padding-bottom: 5px;
+  border: solid white;
+  border-radius: 5px; }
+
+.SelectSearch {
+  padding-top: 10px; }
+  .SelectSearch .results {
+    background: #e8e8e8; }
+    .SelectSearch .results li {
+      padding: 5px;
+      color: #1e1e2b; }
+  .SelectSearch .selected {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 5px; }
+    .SelectSearch .selected li {
+      background: #ab1e24;
+      padding: 5px; }
